# hk

./: BUGS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  run-qemu.sh
.cargo/: config.toml
boot/: grub.cfg
doc/: COMPAT.md  LOCKING.md  NUMA.md  SYSCALLS.md  clone.md  mmap.md
kernel/: Cargo.toml  acct.rs  build.rs  chardev.rs  cmdline.rs  console.rs  dma.rs  elf.rs  epoll.rs  error.rs  eventfd.rs  fanotify.rs  frame_alloc.rs  futex.rs  heap.rs  inotify.rs  io_uring.rs  kcmp.rs  main.rs  membarrier.rs  multiboot2.rs  numa.rs  pidfd.rs  pipe.rs  poll.rs  posix_timer.rs  power.rs  printk.rs  random.rs  rlimit.rs  signalfd.rs  time.rs  (+6 more)
user/: .gitignore  Cargo.toml  Makefile  boot_tester.rs  boot_tester2.rs
user/.cargo/: config.toml
user/boot_tester/: Cargo.toml  boot_tester2.rs  main.rs
user/boot_tester/tests/: acct.rs  adjtimex.rs  bpf.rs  capabilities.rs  cgroup.rs  clone3_syslog.rs  epoll.rs  eventfd.rs  fanotify.rs  fcntl_owner.rs  file_io.rs  flock.rs  fs_common.rs  fs_ops.rs  futex.rs  helpers.rs  inotify.rs  io_uring.rs  ioport.rs  ipc.rs  kcmp.rs  keys.rs  mempolicy.rs  mmap.rs  mod.rs  mqueue.rs  namespace.rs  permissions.rs  pidfd.rs  poll.rs  posix_lock.rs  posix_timer.rs  prctl.rs  prctl_extra.rs  process.rs  process_vm.rs  rlimit.rs  signalfd.rs  signals.rs  sockets.rs  (+8 more)
user/syscall/: Cargo.toml  aarch64.rs  lib.rs  mod.rs  types.rs  x86_64.rs
user/tests/: file_io.rs  fs_common.rs  fs_ops.rs  futex.rs  helpers.rs  ipc.rs  mmap.rs  mod.rs  namespace.rs  permissions.rs  process.rs  rlimit.rs  signals.rs  sync.rs  sysinfo.rs  vfs.rs
(+209 files in other folders)
